[package]
name = "diss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
fnv = "1.0.7"
murmur3 = "0.5.2"
chrono = "0.4.31"
fastmurmur3 = "0.2.0"
criterion = { version = "0.5.1" }
slab = "0.4.9"
h2 = "0.4.2"
log = "0.4.20"
ahash = "0.8.8"

[[bench]]
name = "bloom_filter_benchmark"
path = "src/benches/benchmark.rs"
harness = false

